--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
+*.terraform
 
 # Crash log files
 crash.log
@@ -27,5 +28,8 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
-.temp.html 
+.temp.html
 .temp.seed
+
+# zip files
+*.zip
